--- a/MessiahSolutionsComFrontEnd/Views/Services.cshtml
+++ b/MessiahSolutionsComFrontEnd/Views/Services.cshtml
@@ -9,17 +9,7 @@
     var ourAdvantagesTitleLink = Model.Value<IPublishedContent>("ourAdvantagesTitleLink").Url();
 }
 
-<!-- Breadcrumbs-->
-<!--<section class="breadcrumbs-custom bg-image">
-    <div class="container">
-        <p class="heading-1 breadcrumbs-custom-title">Services</p>
-        <ul class="breadcrumbs-custom-path">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="#">Pages</a></li>
-            <li class="active">Services</li>
-        </ul>
-    </div>
-</section>-->
+
 <!-- a few words About Us-->
 <section class="section section-lg text-center text-md-left bg-default">
     <div class="container container-wide">
@@ -104,8 +94,7 @@
 
 <section class="section section-lg text-center bg-gray-darker">
     <div class="container-wide">
-        @*<h3>Our Advantages</h3>
-            <div class="divider divider-default"></div>*@
+        
         <a href="@ourAdvantagesTitleLink" class="animated-title-divider longer">
             <h3>@Model.Value("ourAdvantagesTitle")</h3>
             <div class="divider divider-default"></div>
@@ -127,7 +116,7 @@
                             </div>
                             <div class="read-more">
                                 @*<a href="@advantage.Url()">Read More</a>*@
-                                <label>Read more</label>
+                                <label>@Umbraco.GetDictionaryValue("read more")</label>
                             </div>
                         </article>
                     </a>
@@ -169,48 +158,6 @@
         </div>
     </div>
 </section>
-
-<!-- Our Advantages-->
-@*<section class="section section-lg text-center bg-gray-darker">
-        <div class="container-wide">
-            <h3>Our Advantages</h3>
-            <div class="divider divider-default"></div>
-            <div class="row row-50 justify-content-sm-center text-left">
-                <div class="col-sm-10 col-md-6 col-xl-3">
-                    <article class="box-minimal box-minimal-border">
-                        <div class="box-minimal-icon mdi mdi-thumb-up-outline"></div>
-                        <p class="big box-minimal-title">Individual Approach</p>
-                        <hr>
-                        <div class="box-minimal-text">We use an individual approach to each client and we never offer you a set of standard decisions for your business.</div>
-                    </article>
-                </div>
-                <div class="col-sm-10 col-md-6 col-xl-3">
-                    <article class="box-minimal box-minimal-border">
-                        <div class="box-minimal-icon mdi mdi-account-multiple"></div>
-                        <p class="big box-minimal-title">Qualified Employers</p>
-                        <hr>
-                        <div class="box-minimal-text">Effective is a team of designers, developers, marketing experts and managers who are ready to work for a personalized IT solution.</div>
-                    </article>
-                </div>
-                <div class="col-sm-10 col-md-6 col-xl-3">
-                    <article class="box-minimal box-minimal-border">
-                        <div class="box-minimal-icon mdi mdi-headset"></div>
-                        <p class="big box-minimal-title">24/7 Online Support</p>
-                        <hr>
-                        <div class="box-minimal-text">Our online support is available 24 hours a day to answer your every question and help you solve any issue you may have with our products and services.</div>
-                    </article>
-                </div>
-                <div class="col-sm-10 col-md-6 col-xl-3">
-                    <article class="box-minimal box-minimal-border">
-                        <div class="box-minimal-icon mdi mdi-credit-card"></div>
-                        <p class="big box-minimal-title">Various Payment Methods</p>
-                        <hr>
-                        <div class="box-minimal-text">We provide a variety of payment methods that include Paypal, Visa/Mastercard/American Express and lots of others, which can be customized.</div>
-                    </article>
-                </div>
-            </div>
-        </div>
-    </section>*@
 
 @if (Model.Children().Where(x => x.IsVisible()).Count() > 0)
 {
@@ -261,76 +208,3 @@
         </section>
     }
 }
-
-@*<section class="section section-wrap section-wrap-equal section-md-reverse">
-        <div class="section-wrap-inner">
-            <div class="container container-bigger">
-                <div class="row row-ten justify-content-md-center justify-content-lg-end justify-content-xl-end">
-                    <div class="col-sm-8 col-md-4 col-lg-4">
-                        <div class="section-lg">
-                            <h3>It Consulting</h3>
-                            <div class="divider divider-default"></div>
-                            <p>We provide our clients with high-quality IT consulting aimed to improve the performance of your companies’ informational infrastructure.</p><a class="button button-primary" href="single-service.html">learn more</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="section-wrap-aside section-wrap-image">
-                <img src="/images/services-1-960x660.jpg" alt="" width="960" height="660" />
-            </div>
-        </div>
-    </section>
-    <section class="section section-wrap section-wrap-equal">
-        <div class="section-wrap-inner">
-            <div class="container container-bigger">
-                <div class="row row-ten justify-content-md-center justify-content-lg-start justify-content-xl-between">
-                    <div class="col-sm-8 col-md-4 col-lg-4">
-                        <div class="section-lg">
-                            <h3>Web Design</h3>
-                            <div class="divider divider-default"></div>
-                            <p>Our company offers web design and development services to help customers quickly develop sustainable web strategies and build cutting-edge websites.</p><a class="button button-primary" href="single-service.html">learn more</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="section-wrap-aside section-wrap-image">
-                <img src="/images/services-2-960x660.jpg" alt="" width="960" height="660" />
-            </div>
-        </div>
-    </section>
-    <section class="section section-wrap section-wrap-equal section-md-reverse">
-        <div class="section-wrap-inner">
-            <div class="container container-bigger">
-                <div class="row row-ten justify-content-md-center justify-content-lg-end justify-content-xl-end">
-                    <div class="col-sm-8 col-md-4 col-lg-4">
-                        <div class="section-lg">
-                            <h3>IT Support</h3>
-                            <div class="divider divider-default"></div>
-                            <p>Effective has everything to support and maintain your IT resources! Just give us a call to find out how our web and IT support solutions can help you.</p><a class="button button-primary" href="single-service.html">learn more</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="section-wrap-aside section-wrap-image">
-                <img src="/images/services-3-960x660.jpg" alt="" width="960" height="660" />
-            </div>
-        </div>
-    </section>
-    <section class="section section-wrap section-wrap-equal">
-        <div class="section-wrap-inner">
-            <div class="container container-bigger">
-                <div class="row row-ten justify-content-md-center justify-content-lg-start justify-content-xl-between">
-                    <div class="col-sm-8 col-md-4 col-lg-4">
-                        <div class="section-lg">
-                            <h3>Specialized Apps</h3>
-                            <div class="divider divider-default"></div>
-                            <p>As the leading IT services provider on the market, we supply companies with customized applications and software suites developed according to their industrial needs.</p><a class="button button-primary" href="single-service.html">learn more</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="section-wrap-aside section-wrap-image">
-                <img src="/images/services-4-960x660.jpg" alt="" width="960" height="660" />
-            </div>
-        </div>
-    </section>*@
