Progress with content / design and RTL support / QA

--- a/WebsiteFrontEnd/Views/Service.cshtml
+++ b/WebsiteFrontEnd/Views/Service.cshtml
@@ -72,7 +72,7 @@
                                 @advantage.Value("advantageDescription")
                             </div>
                             <div class="read-more">
-                                <label>Read more</label>
+                                <label>@Umbraco.GetDictionaryValue("read more")</label>
                             </div>
                         </article>
                     </a>
@@ -144,11 +144,3 @@
     </div>
 </section>
 
-<!-- HOT! Contact Us now! -->
-<!--<section class="section section-xs text-center bg-gray-dark">
-    <div class="container-wide">
-        <div class="box-cta-thin">
-            <p class="big"><span class="label-cta label-cta-primary">Hot!</span><strong>Effective </strong>&nbsp;<span>is your choice in the world of IT companies.&nbsp;</span><a class="link-bold" href="contacts.html">Contact us now!</a></p>
-        </div>
-    </div>
-</section>-->
