--- a/WebsiteFrontEnd/Views/Services.cshtml
+++ b/WebsiteFrontEnd/Views/Services.cshtml
@@ -144,9 +144,9 @@
 
         <section class="section section-wrap section-wrap-equal @filpedSideCssClass">
             <div class="section-wrap-inner">
-                <div class="container container-bigger">
-                    <div class="row row-ten justify-content-md-center @innerContentCSSClassFlipFixes">
-                        <div class="col-sm-8 col-md-4 col-lg-4">
+                <div>
+                    <div class="content-flip-area">
+                        <div>
                             <div class="section-lg">
                                 <a href="@serviceNodeDetails.Url()" class="animated-title-divider longer2">
                                     <h3 class="little-smaller">@serviceNodeDetails.Value("serviceTitle")</h3>
@@ -156,7 +156,7 @@
                                     @serviceNodeDetails.Value("serviceDescription")
                                 </p>
                                 <div class="text-center form-button">
-                                    <a class="button button-primary" href="@serviceNodeDetails.Url()">Read More</a>
+                                    <a class="button button-primary" href="@serviceNodeDetails.Url()">@Umbraco.GetDictionaryValue("read more")</a>
                                 </div>
                             </div>
                         </div>
