--- a/WebsiteFrontEnd/Views/ContactUs.cshtml
+++ b/WebsiteFrontEnd/Views/ContactUs.cshtml
@@ -26,37 +26,37 @@
                     <div class="row row-20">
                         <div class="col-md-6">
                             <div class="form-wrap form-wrap-validation">
-                                <label class="form-label-outside" for="form-1-name">First name</label>
+                                <label class="form-label-outside" for="form-1-name">@Umbraco.GetDictionaryValue("First name")</label>
                                 <input class="form-input form-control-has-validation form-control-last-child" id="form-1-name" type="text" name="firstname"><span class="form-validation"></span>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="form-wrap form-wrap-validation">
-                                <label class="form-label-outside" for="form-1-last-name">Last name</label>
+                                <label class="form-label-outside" for="form-1-last-name">@Umbraco.GetDictionaryValue("Last name")</label>
                                 <input class="form-input form-control-has-validation form-control-last-child" id="form-1-last-name" type="text" name="lastname"><span class="form-validation"></span>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="form-wrap form-wrap-validation">
-                                <label class="form-label-outside" for="form-1-email">E-mail</label>
+                                <label class="form-label-outside" for="form-1-email">@Umbraco.GetDictionaryValue("E-mail")</label>
                                 <input class="form-input form-control-has-validation form-control-last-child" id="form-1-email" type="email" name="Email"><span class="form-validation"></span>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="form-wrap form-wrap-validation">
-                                <label class="form-label-outside" for="form-1-phone">Phone</label>
+                                <label class="form-label-outside" for="form-1-phone">@Umbraco.GetDictionaryValue("Phone")</label>
                                 <input class="form-input form-control-has-validation form-control-last-child" id="form-1-phone" type="text" name="Phone"><span class="form-validation"></span>
                             </div>
                         </div>
                         <div class="col-sm-12">
                             <div class="form-wrap form-wrap-validation">
-                                <label class="form-label-outside" for="form-1-message">Message</label>
+                                <label class="form-label-outside" for="form-1-message">@Umbraco.GetDictionaryValue("Message")</label>
                                 <textarea class="form-input form-control-has-validation form-control-last-child" id="form-1-message" name="Message"></textarea><span class="form-validation"></span>
                             </div>
                         </div>
                         <div class="col-sm-12 offset-custom-1">
                             <div class="form-button">
-                                <button class="button button-primary" type="submit">send message</button>
+                                <button class="button button-primary" type="submit">@Umbraco.GetDictionaryValue("send message")</button>
                             </div>
                         </div>
                     </div>
@@ -73,7 +73,7 @@
                 <div class="column-aside">
                     <div class="row">
                         <div class="col-sm-10 col-md-6 col-lg-12">
-                            <h6>Address</h6>
+                            <h6>@Umbraco.GetDictionaryValue("Address")</h6>
                             <hr class="divider-thin">
                             <article class="box-inline">
                                 <span>
@@ -82,16 +82,16 @@
                             </article>
                         </div>
                         <div class="col-sm-10 col-md-6 col-lg-12">
-                            <h6>Phone</h6>
+                            <h6>@Umbraco.GetDictionaryValue("Phone")</h6>
                             <hr class="divider-thin">
                             <article class="box-inline">
-                                <span>
+                                <span style="direction:ltr">
                                     @Html.Raw(Model.Value("businessPhone").ToString().Replace("\n", "<br/>"))
                                 </span>
                             </article>
                         </div>
                         <div class="col-sm-10 col-md-6 col-lg-12">
-                            <h6>E-mail</h6>
+                            <h6>@Umbraco.GetDictionaryValue("E-mail")</h6>
                             <hr class="divider-thin">
                             <article class="box-inline">
                                 <span>
@@ -100,7 +100,7 @@
                             </article>
                         </div>
                         <div class="col-sm-10 col-md-6 col-lg-12">
-                            <h6>Opening hours</h6>
+                            <h6>@Umbraco.GetDictionaryValue("Opening hours")</h6>
                             <hr class="divider-thin">
                             <article class="box-inline">
                                 <span>
