--- a/WebsiteFrontEnd/Views/OurAdvantages.cshtml
+++ b/WebsiteFrontEnd/Views/OurAdvantages.cshtml
@@ -56,9 +56,9 @@
 
         <section class="section section-wrap section-wrap-equal @filpedSideCssClass">
             <div class="section-wrap-inner">
-                <div class="container container-bigger">
-                    <div class="row row-ten justify-content-md-center @innerContentCSSClassFlipFixes">
-                        <div class="col-sm-8 col-md-4 col-lg-4">
+                <div>
+                    <div class="content-flip-area">
+                        <div>
                             <div class="section-lg">
                                 <a href="@serviceNodeDetails.Url()" class="animated-title-divider longer2">
                                     <h3 class="little-smaller">@serviceNodeDetails.Value("advantageTitle")</h3>
